refactoring and fixing bug that made the clock jump around when 'fin' status displayed

--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ body, html {
 
 #examSettings li {
     display: inline-block;
-    margin-right: 15px;
+    margin-right: 10px;
 }
 
 #extraTimeToggle {
@@ -63,7 +63,7 @@ body, html {
 }
 
 #clock {
-    font-size: 15vw;
+    font-size: 16vw;
 }
 
 .timeInfo {
